[workspace]
resolver = "2"
members = ["price-pusher-core", "price-pusher-aptos", "price-pusher"]

[workspace.dependencies]
# Core Async/Runtime
tokio = { version = "1", features = ["full"] }

# HTTP/WebSocket
reqwest = { version = "0.12", features = ["json", "stream"] }
# tokio-tungstenite = { version = "0.21", features = ["native-tls"] } # Add later if WebSocket needed

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# CLI Args
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# log = "0.4" # Alternative logging facade
# env_logger = "0.11" # Alternative logger implementation

# Error Handling
anyhow = "1.0"
# thiserror = "1.0" # Alternative for library errors

# Blockchain SDKs
# aptos dependency removed, will be added directly via git in aptos crate

# Utilities
hex = "0.4"
base64 = "0.22"
async-trait = "0.1"
rand = "0.8"        # For Aptos account generation/derivation if needed directly

# Other direct dependencies (if any specific to aptos)
# e.g., specific crypto libraries if needed beyond aptos-sdk
[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
