[package]
name = "price-pusher-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }

serde_yaml = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
tempfile = "3.19.1"
log = { version = "0.4.27", features = [] }
pyth-hermes-client = { git = "https://github.com/AftermathFinance/aftermath-sdk-rust.git", branch = "main" }
bigdecimal = "0.4.7"
# Other direct dependencies (if any specific to core)

[dev-dependencies]
mockito = "1"
tempfile = "3"
serde_json = "1.0" # Needed for json! macro in tests
